--- a/style.scss
+++ b/style.scss
@@ -36,14 +36,15 @@ body {
             font-family: sans-serif;
             text-transform: uppercase;
             text-align: left;
-            width: 80%;
+            width: 70%;
             margin: 2em auto;
+            line-height: 1.1em;
         }
 
         ul {
             text-transform: uppercase;
             color: white;
-            width: 80%;
+            width: 70%;
             margin: 6em auto;
             list-style: none;
 
@@ -71,7 +72,6 @@ body {
         .country-input {
             display: block;
             height: fit-content;
-            width: 41%;
             font-size: 1.6em;
             border: none;
             margin: 0 auto;
@@ -168,6 +168,8 @@ body {
             padding: 0;
             display: inline-block;
         }
+
+       
     }
 
     .hamburger:hover {
